--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "popper": "^1.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-i18next": "^7.6.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
